--- a/docs/usage.adoc
+++ b/docs/usage.adoc
@@ -207,13 +207,11 @@ be converted to a link to the related content(s).
 {
   guillotine {
     query(contentTypes:"com.enonic.app.myapp:post") {
-      hits {
-        displayName
-        ... on com_enonic_app_myapp_Post {
-          data {
-            author {
-              displayName
-            }
+      displayName
+      ... on com_enonic_app_myapp_Post {
+        data {
+          author {
+            displayName
           }
         }
       }
@@ -234,11 +232,9 @@ Guillotine uses this functionality by generating, on every image, a field "image
 {
   guillotine {
     query(contentTypes:"media:image") {
-      hits {
-        displayName
-        ... on media_Image {
-          imageUrl(scale:"block(800,200)",type:absolute)
-        }
+      displayName
+      ... on media_Image {
+        imageUrl(scale:"block(800,200)",type:absolute)
       }
     }
   }
@@ -254,14 +250,15 @@ HTML fields are generated with a parameter "processHtml" allowing to replace abs
 {
   guillotine {
     query(contentTypes:"com.enonic.app.myapp:post") {
-      hits {
-        ... on com_enonic_app_myapp_Post {
-          data {
-            author {
-              displayName
-            }
-            tags
-            post(processHtml:{type:absolute})
+      ... on com_enonic_app_myapp_Post {
+        data {
+          author {
+            displayName
+          }
+          tags
+          post(processHtml:{type:absolute}) {
+             raw
+             processedHtml
           }
         }
       }
