Docs for Guillotine 5.1 #167

--- a/docs/api.adoc
+++ b/docs/api.adoc
@@ -151,7 +151,10 @@ Interface of all contents.
 |dataAsJson: JSON
 |Content data
 
-|x: [<<ExtraData>>]
+|[.line-through]#x: [<<ExtraData>>]#
+|Content extra data. *This field is deprecated and will be removed starting from version 6.0.0.*
+
+|xAsJson: JSON
 |Content extra data
 
 |pageAsJson: JSON
