--- a/docs/advanced.adoc
+++ b/docs/advanced.adoc
@@ -4,7 +4,7 @@ This section describes how to customize your schema deployment
 
 == Integrating Guillotine to an existing schema
 
-You may have an existing GraphQL schema and wish to integrate Guillotine to this schema. 
+You may have an existing GraphQL schema and wish to integrate Guillotine to this schema.
 In that case, use the functions `createContext` and `createHeadlessCmsType` instead of `createSchema`
 
 === Example
@@ -22,7 +22,7 @@ exports.post = function (req) {
     var result = graphQlLib.execute(schema, body.query, body.variables);
     return {
         contentType: 'application/json',
-        body: result
+        body: JSON.stringify(result)
     };
 };
 
@@ -58,11 +58,11 @@ function createRootQueryType(context) {
 The default Guillotine schema provides fields based on the content type schemas.
 But you might want to add/modify/delete fields (new retrieval methods, search in a separate database, virtual fields, ...).
 
-The guillotine schema is entirely configurable. 
-When creating a schema, you can define a listener for a GraphQL type. 
+The guillotine schema is entirely configurable.
+When creating a schema, you can define a listener for a GraphQL type.
 This listener will be called before the type is created and given the possibility to modify the type creation parameters.
 
-[NOTE] 
+[NOTE]
 .GraphQL - Enonic XP Library
 ==== 
 A library has been implemented to facilitate the creation of a GraphQL service on Enonic XP: `lib-graphql`.
@@ -123,22 +123,160 @@ var schema = guillotineLib.createSchema({
 
 exports.post = function (req) {
     var body = JSON.parse(req.body);
-    var result = JSON.stringify(graphQlLib.execute(schema, body.query, body.variables));
+    var result = graphQlLib.execute(schema, body.query, body.variables);
     return {
         contentType: 'application/json',
-        body: result
+        body: JSON.stringify(result)
     };
 };
 ----
-<1> Passes a callback that will be called before the creation of the specified GraphQL type. 
+<1> Passes a callback that will be called before the creation of the specified GraphQL type.
 It receives the Guillotine context and the object type creation parameters.
 <2> Adds a new string field "fullName" concatenating two other fields.
 The resolution function will query contents of type post having the current author ID as field "data.author"
 <3> Overwrites the resolution function of an existing field "email"
 <4> Deletes an existing field "birthDate"
-<5> Adds a new field "posts" returning a list of posts. 
+<5> Adds a new field "posts" returning a list of posts.
 
 
-These are only examples. You could also modify the type 'Query' and add an entire new API next to the Headless CMS API. 
+These are only examples. You could also modify the type `Query` and add an entire new API next to the Headless CMS API.
 
 
+Starting from image:images/v-5.1.0.svg[Since verision,opts=inline] Guillotine provides two new methods to simplify work with subscriptions and execution of a GraphQL query:
+
+- `createWebSocketData(req)` - create data object for websocket from request
+
+[source,javascript]
+----
+webSocket: {
+    data: guillotineLib.createWebSocketData(req),
+    subProtocols: ['graphql-ws']
+}
+----
+
+- `execute(params)` - This method allows you to execute a GraphQL query. To execute this method, it's enough to pass `query` and `variables`. In this case, a schema will be created for each branch of the site and can be further customised using the `schemaOptions` parameter. This schema will be automatically updated when the application is added to the site or when it is removed and re-deployed. Schemas created outside of this method have to be updated manually.
+
+List of properties for `params` object:
+
+|===
+|Name | Description | Default value
+
+|query:String
+|GraphQL query. Property is required.
+|
+
+|variables:Object
+|Variables for GraphQL query. Property is required.
+|
+
+|siteId:String
+|Site ID. Property is optional.
+|ID of a current site.
+
+|branch:String
+|Branch. Property is optional.
+|Branch from request.
+
+|schema:SCHEMA
+|GraphQL SCHEMA. Property is optional.
+|
+
+|schemaOptions:Object
+|SchemaOptions object to customize schema. Property is optional.
+|
+|===
+
+List of properties for `schemaOptions` object:
+
+|===
+|Name | Description
+
+|applications: String or Array.<String>
+|Allowed application keys in addition to this site. Property is optional.
+
+|allowPaths:String or Array.<String>
+|Allowed content paths in addition to this site. Property is optional.
+
+|subscriptionEventTypes:String or Array.<String>
+|Specifies event type patterns to be listened by GraphQL Subscription. Property is optional.
+|===
+
+
+[source,javascript]
+----
+const guillotineLib = require('/lib/guillotine');
+
+exports.post = function (req) {
+    let input = JSON.parse(req.body);
+
+    let params = {
+        query: input.query,
+        variables: input.variables
+    };
+
+    return {
+        contentType: 'application/json',
+        body: guillotineLib.execute(params)
+    };
+};
+----
+
+or
+
+[source,javascript]
+----
+const guillotineLib = require('/lib/guillotine');
+const contentLib = require('/lib/xp/content');
+const contextLib = require('/lib/xp/context');
+const portalLib = require('/lib/xp/portal');
+
+exports.post = function (req) {
+    let siteConfig = contextLib.run({
+        branch: req.branch
+    }, () => contentLib.getSiteConfig({
+        key: portalLib.getSite()._id,
+        applicationKey: 'com.enonic.app.guillotine'
+    }));
+
+    let input = JSON.parse(req.body);
+
+    let params = {
+        query: input.query,
+        variables: input.variables,
+        schemaOptions: {
+            applications: siteConfig.applications,
+            allowPaths: siteConfig.allowPaths,
+            subscriptionEventTypes: siteConfig.subscriptionEventTypes
+        }
+    };
+
+    return {
+        contentType: 'application/json',
+        body: guillotineLib.execute(params)
+    };
+};
+----
+
+or
+
+[source,javascript]
+----
+const guillotineLib = require('/lib/guillotine');
+
+const SCHEMA = guillotineLib.createSchema();
+
+exports.post = function (req) {
+    let input = JSON.parse(req.body);
+
+    let params = {
+        query: input.query,
+        variables: input.variables,
+        schema: SCHEMA
+    };
+
+    return {
+        contentType: 'application/json',
+        body: guillotineLib.execute(params)
+    };
+};
+----
