--- a/docs/release.adoc
+++ b/docs/release.adoc
@@ -1,5 +1,27 @@
 = Release Notes
 
+== Version 5.1
+
+This release introduces improvements to the subscriptions API, new functions to simplify execution of a GraphQL query and bugs fixes.
+
+=== Subscriptions
+
+- The `SCHEMA` argument becomes optional for `guillotineLib.initWebSockets(SCHEMA)` function
+- New function to create WebSocket data from request `guillotineLib.createWebSocketData(req)`
+
+=== Schema creation and query execution
+
+- New function `guillotine Lib.execute(params)` to execute a GraphQL query. Also this function allows to create and generate a schema if the site or related apps were changed. More details <<advanced#, here>>.
+
+=== Improvements
+
+- Introduced new `xAsJson` field for Content type.
+
+=== Bug fixes
+
+- Getting draft events via master branch
+- `first` argument does not have effect on content with ImageSelector input type
+
 == Version 5.0
 
 This release simplifies use of rich text content, introduces aggregations and filters, adds scalars for JSON and other common data types, improvements to the subscriptions API and improved consistency in type and field naming. 
@@ -33,6 +55,8 @@ A new default WS event handler `guillotineLib.initWebSockets(SCHEMA)` has also b
 
 
 == Breaking changes
+
+=== Version 5.0
 
 Type renaming:: Component types like Part, Page and Layout was changed:
 from `<ComponentType>ComponentDataDescriptorConfig` to `<ComponentType>_<applicationKey>_<descriptorName>`, and
