Add minDocCount field to TermsAggregationInput #89

--- a/docs/api.adoc
+++ b/docs/api.adoc
@@ -845,6 +845,9 @@ image:images/v-500.svg[Since version,opts=inline] Aggregations enable extracting
 |size: Int
 |Bucket size, ordered by the given orderType and orderDirection. Defaults to 10.
 
+|minDocCount: Int
+|Only include bucket in result if number of hits more or equal minDocCount.
+
 |===
 
 === StatsAggregationInput
