Add docs for release 5.2.0 #174

--- a/docs/api.adoc
+++ b/docs/api.adoc
@@ -846,7 +846,7 @@ image:images/v-500.svg[Since version,opts=inline] Aggregations enable extracting
 |Bucket size, ordered by the given orderType and orderDirection. Defaults to 10.
 
 |minDocCount: Int
-|Only include bucket in result if number of hits more or equal minDocCount.
+|image:images/v-5.2.0.svg[Since version,opts=inline] Only include bucket in result if number of hits more or equal minDocCount.
 
 |===
 
@@ -864,6 +864,8 @@ image:images/v-500.svg[Since version,opts=inline] Aggregations enable extracting
 
 === MinAggregationInput
 
+image:images/v-5.2.0.svg[Since version,opts=inline]
+
 ==== Fields
 
 |===
@@ -877,6 +879,8 @@ image:images/v-500.svg[Since version,opts=inline] Aggregations enable extracting
 
 === MaxAggregationInput
 
+image:images/v-5.2.0.svg[Since version,opts=inline]
+
 ==== Fields
 
 |===
@@ -888,6 +892,8 @@ image:images/v-500.svg[Since version,opts=inline] Aggregations enable extracting
 |===
 
 === ValueCountAggregationInput
+
+image:images/v-5.2.0.svg[Since version,opts=inline]
 
 ==== Fields
 
