--- a/README.adoc
+++ b/README.adoc
@@ -19,6 +19,14 @@ For the full documentation of the Guillotine project, visit the Enonic Developer
 |XP Version
 |Dependency
 
+|5.2.0
+|7.7.0
+|com.enonic.lib:lib-guillotine:5.2.0
+
+|5.1.0
+|7.2.0
+|com.enonic.lib:lib-guillotine:5.1.0
+
 |5.0.0
 |7.2.0
 |com.enonic.lib:lib-guillotine:5.0.0
