support easy trimming of _path via guillotine API #192

--- a/docs/api.adoc
+++ b/docs/api.adoc
@@ -115,7 +115,7 @@ Interface of all contents.
 |_name: String!
 |Content name
 
-|_path: String!
+|_path(siteRelative: GraphQLBoolean): String!
 |Content path
 
 |creator: <<PrincipalKey>>
