--- a/docs/advanced.adoc
+++ b/docs/advanced.adoc
@@ -131,7 +131,7 @@ exports.post = function (req) {
 };
 ----
 <1> Passes a callback that will be called before the creation of the specified GraphQL type.
-It receives the Guillotine context and the object type creation parameters.
+It receives the Guillotine context and the object type creation parameters. Starting from version image:images/v-540.svg[Since version,opts=inline] interface types are also customizable.
 <2> Adds a new string field "fullName" concatenating two other fields.
 The resolution function will query contents of type post having the current author ID as field "data.author"
 <3> Overwrites the resolution function of an existing field "email"
