--- a/README.adoc
+++ b/README.adoc
@@ -19,6 +19,10 @@ For the full documentation of the Guillotine project, visit the Enonic Developer
 |XP Version
 |Dependency
 
+|5.4.0
+|7.7.0
+|com.enonic.lib:lib-guillotine:5.4.0
+
 |5.3.1
 |7.7.0
 |com.enonic.lib:lib-guillotine:5.3.1
