--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -1,53 +1,36 @@
-= Headless CMS for Enonic XP - Project Guillotine
+= Guillotine project
 
-Get instant access to XP's Content API and query language over GraphQL
+Guillotine turns Enonic XP into a headless CMS by adding a GraphQL content API to the platform.
+
+TIP: *Quickstart!* For a quick intro to basic use of Guillotine, check out https://developer.enonic.com/docs/headless-cms-intro[Headless CMS intro].
 
 == Introduction
-Project Guillotine adds a headless CMS GraphQL API to your site.
+Guillotine is available on https://market.enonic.com/vendors/enonic/guillotine-headless-cms[Enonic Market].
 
-Guillotine builds on the following components:
+The application essentially provides a strongly typed GraphQL read-only version of XP's https://developer.enonic.com/docs/xp/stable/api/lib-content[JavaScript Content API].
 
-* https://developer.enonic.com/docs/xp[Enonic XP] - The core platform
-** Content API - CMS core embedded in Enonic XP
-** Site engine - Delivery engine for Guillotine
-* https://developer.enonic.com/docs/content-studio[Content Studio] - CMS Authoring interface
+== Query playground
 
-TIP: *Quickstart!* Check out the https://developer.enonic.com/guides/headless-cms-intro[Headless CMS intro] for the fastest way to start building headless Enonic sites with project Guillotine.
+Developers, and super users may instantly test the API via a Content Studio extension called `Query playground`, which is included in the Guillotine application.
 
+Learn more about GraphQL and <<playground#,Query Playground>>
 
-== Why headless XP?
+== Rich text processing
 
-In addition to being a highly capable headless CMS, Enonic XP provides the following benefits:
+This section specifically dives into processing of rich-text, including image handling and macro components.
 
-* Bulk and cherry-pick publishing
-* Mature and rich content modelling capabilities
-* Developer appraised SDK that runs on a standalone computer
-* Tree structures and document level access control
-* Fully programmable and customisable preview
-* Supports visual landing page authoring with typed components
-* Dynamically generated and strongly typed API
-* Real-time event streaming over websockets (GraphQL Subscriptions)
-* API and access to it can be customized
-* Developers are in full control of API versioning
-* Hybrid - capable of acting as a traditional CMS as well
-* Supports on premises deployment
-* 100% Open Source
-
-== Deployment
-
-With a running instance of Enonic XP installed, you will need to deploy the API on the platform. There are essentially two ways of deploying: by embedding Guillotine witin your app, or by installing the Guillotine application.
-
-<<deployment#,Details on deployment>>
-
-== Usage
-
-Once deployed, you get access to a range of capabilities, from running queries and following references to activating subscriptions.
-
-Learn more about the <<api#,API>>, and <<usage#,how to use it>>.
+Learn more about <<rich-text#,Rich text handling>>
 
 
-== Advanced topics
+== GraphQL API
 
-By embedding Guillotine, you may take control over where it is deployed, who can access it and even customise the API. 
+Guillotine provides a set of standard fields like `get` and `query`. Additionally, it dynamically generates GraphQL Types based on the schemas (content types, components etc) registered in your Enonic instance.
 
-<<advanced#, Read more about extending and modifying the GraphQL API>>
+Learn more about the standard types of the <<api#,API>>
+
+
+== Embedding and advanced topics
+
+Guillotine is also available in a library version, which may be embedded it into your app. There you may take control over where the API is exposed, specify role-based access, and even customise the API itself.
+
+<<embed#, Read more about integrating and modifying the Guillotine API>>
