--- a/docs/rich-text.adoc
+++ b/docs/rich-text.adoc
@@ -1,107 +1,14 @@
-= HTML Editor processing
+= Rich text processing
 
 image:images/v-500.svg[Since version,opts=inline] The default Guillotine HTML editor type provides processing of macros and image source URLs in the `processedHtml` field of the <<api#richtext, RichText>> GraphQL object type.
 But you might want to have custom processing of macros and images, for that you can use `macrosAsJson`, `macros` and `images` fields of the <<api#richtext, RichText>>.
 
 == Usage
 
-=== Macros
+=== Links
 
-Each macro will be translated to an `editor-macro` tag with `data-macro-ref` and `data-macro-name` attributes in the `processedHtml` field value. Using these references you will be able to find details of a specific macro in the `macrosAsJson` or `macros` fields and perform custom macro processing if needed.
+TODO
 
-[NOTE]
-====
-Guillotine processes macros which have a descriptor and built-in macros called `disable` and `embed`, otherwise processing will be skipped. More details about macros https://developer.enonic.com/docs/xp/stable/cms/macros[here].
-====
-
-For instance, we have an input form item called `description` of `HtmlArea` type which contains the `embed` macro as shown below:
-
-image:images/embed-macro.png[Embed Macro]
-
-The query below will fetch data for the `description` field:
-
-[source,graphql]
-----
-query {
-  guillotine {
-    get(key: "contentID") {
-      ... on com_app_example_ContentType {
-        data {
-          description {
-            raw            // (1)
-            processedHtml  // (2)
-            macrosAsJson   // (3)
-            macros {       // (4)
-              ref
-              name
-              descriptor
-              config {
-                embed {
-                  body
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-}
-----
-<1> Non-processed value of the `description` field
-<2> Processed value of the `description` field
-<3> Array of processed macros in JSON format. The order of macros will be the same as in the `raw` and `processedHtml` fields.
-<4> <<api#macro, Macro>> allows to specify necessary fields. That field is an alternative for `macroAsJson` field
-
-
-Results of the query:
-
-image:images/embed-response-example.png[Response for embed macro]
-
-If you use a custom macro it is recommended to use a macro https://developer.enonic.com/docs/xp/stable/cms/macros#descriptor[descriptor] in the `/site/macros/` directory. For instance, for a macro with name `testmacro` the descriptor will be placed by the following path `/site/macros/testmacro/testmacro.xml`
-
-[source,xml]
-----
-<macro>
-  <display-name>Current user</display-name>
-  <description>Shows currently logged user</description>
-  <form>
-    <input name="defaultText" type="TextLine">
-      <label>Text to show if no user logged in</label>
-    </input>
-  </form>
-</macro>
-----
-
-image:images/custom-macro.png[Custom Macro]
-
-The query below will fetch data for the `description` field:
-
-[source,graphql]
-----
-query {
-  guillotine {
-    get(key: "contentID") {
-      ... on com_app_example_ContentType {
-        data {
-          description {
-            macros {
-              ref
-              name
-              descriptor
-              config {
-                testmacro {
-                  defaultText
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-}
-----
 
 === Images
 
@@ -196,4 +103,102 @@ The result will look as follows:
                  /site/repo/branch/appName/_/image/contentID/width-992/imageName.jpg 992w"/>
     <figcaption>Caption text</figcaption>
 </figure>
+----
+
+
+=== Macros
+
+Each macro will be translated to an `editor-macro` tag with `data-macro-ref` and `data-macro-name` attributes in the `processedHtml` field value. Using these references you will be able to find details of a specific macro in the `macrosAsJson` or `macros` fields and perform custom macro processing if needed.
+
+[NOTE]
+====
+Guillotine processes macros which have a descriptor and built-in macros called `disable` and `embed`, otherwise processing will be skipped. More details about macros https://developer.enonic.com/docs/xp/stable/cms/macros[here].
+====
+
+For instance, we have an input form item called `description` of `HtmlArea` type which contains the `embed` macro as shown below:
+
+image:images/embed-macro.png[Embed Macro]
+
+The query below will fetch data for the `description` field:
+
+[source,graphql]
+----
+query {
+  guillotine {
+    get(key: "contentID") {
+      ... on com_app_example_ContentType {
+        data {
+          description {
+            raw            // (1)
+            processedHtml  // (2)
+            macrosAsJson   // (3)
+            macros {       // (4)
+              ref
+              name
+              descriptor
+              config {
+                embed {
+                  body
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+----
+<1> Non-processed value of the `description` field
+<2> Processed value of the `description` field
+<3> Array of processed macros in JSON format. The order of macros will be the same as in the `raw` and `processedHtml` fields.
+<4> <<api#macro, Macro>> allows to specify necessary fields. That field is an alternative for `macroAsJson` field
+
+Results of the query:
+
+image:images/embed-response-example.png[Response for embed macro]
+
+It is common to define a  https://developer.enonic.com/docs/xp/stable/cms/macros#descriptor[schema for your macro]. This is located in the `/site/macros/` directory. For instance, for a macro with name `testmacro` the schema will be placed by the following path `/site/macros/testmacro/testmacro.xml`
+
+[source,xml]
+----
+<macro>
+  <display-name>Current user</display-name>
+  <description>Shows currently logged user</description>
+  <form>
+    <input name="defaulttext" type="TextLine">
+      <label>Text to show if no user logged in</label>
+    </input>
+  </form>
+</macro>
+----
+
+image:images/custom-macro.png[Custom Macro]
+
+Executing the query below will give your the value of the `defaulttext` input, as defined in the above schema.
+
+[source,graphql]
+----
+query {
+  guillotine {
+    get(key: "contentID") {
+      ... on com_app_example_ContentType {
+        data {
+          description {
+            macros {
+              ref
+              name
+              descriptor
+              config {
+                testmacro {
+                  defaultText
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
 ----
